--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
-    "@nestjs/common": "^11.0.1",
+    "@nestjs/common": "^10.4.17",
     "@nestjs/config": "^4.0.1",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/microservices": "^11.0.20",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/core": "^10.4.17",
+    "@nestjs/microservices": "^10.4.17",
+    "@nestjs/platform-express": "^10.4.17",
+    "@nestjs/platform-socket.io": "^10.4.17",
+    "@nestjs/websockets": "^10.4.17",
     "@prisma/client": "^6.5.0",
     "kafkajs": "^2.2.4",
+    "keycloak-connect": "^26.1.1",
+    "nest-keycloak-connect": "^1.10.1",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
@@ -35,7 +39,7 @@
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.1.0",
+    "@nestjs/testing": "^10.4.17",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
@@ -56,7 +60,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.20.0"
   }
 }
