--- a/.github/workflows/sonar-project.properties
+++ b/.github/workflows/sonar-project.properties
@@ -2,6 +2,7 @@
 sonar.projectKey=mon-projet-nest
 sonar.projectName=Mon Projet NestJS
 sonar.projectVersion=1.0.0
+sonar.organization=Musync-Groupe1 
 
 # === Chemins des sources ===
 sonar.sources=src
