correction/add_sonar_organization_3

--- a/.github/workflows/sonar-project.properties
+++ b/.github/workflows/sonar-project.properties
@@ -1,8 +1,18 @@
 # === Identité du projet ===
-sonar.projectKey=mon-projet-nest
+#sonar.projectKey=mon-projet-nest
 sonar.projectName=Mon Projet NestJS
 sonar.projectVersion=1.0.0
+#sonar.organization=Musync-Groupe1
+
+sonar.projectKey=Musync-BadgeManagement
 sonar.organization=Musync-Groupe1
+sonar.sources=src
+sonar.tests=test
+sonar.test.inclusions=**/*.spec.ts
+sonar.exclusions=**/node_modules/**,**/dist/**
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.sourceEncoding=UTF-8
+
 # === Chemins des sources ===
 sonar.sources=src
 sonar.tests=test
