--- a/.github/workflows/sonar-project.properties
+++ b/.github/workflows/sonar-project.properties
@@ -1,32 +1,51 @@
-# === Identité du projet ===
-#sonar.projectKey=mon-projet-nest
-sonar.projectName=Mon Projet NestJS
-sonar.projectVersion=1.0.0
-#sonar.organization=Musync-Groupe1
+# # === Identité du projet ===
+# #sonar.projectKey=mon-projet-nest
+# sonar.projectName=Mon Projet NestJS
+# sonar.projectVersion=1.0.0
+# #sonar.organization=Musync-Groupe1
 
+# sonar.projectKey=Musync-BadgeManagement
+# sonar.organization=Musync-Groupe1
+# sonar.sources=src
+# sonar.tests=test
+# sonar.test.inclusions=**/*.spec.ts
+# sonar.exclusions=**/node_modules/**,**/dist/**
+# sonar.typescript.lcov.reportPaths=coverage/lcov.info
+# sonar.sourceEncoding=UTF-8
+
+# # === Chemins des sources ===
+# sonar.sources=src
+# sonar.tests=test
+
+# # === Langue principale du projet ===
+# sonar.language=ts
+
+# # === Fichiers à inclure / exclure ===
+# sonar.exclusions=**/node_modules/**, **/dist/**, **/*.spec.ts
+# sonar.test.inclusions=**/*.spec.ts
+
+# # === Configuration TypeScript ===
+# sonar.ts.tslintconfigpath=tslint.json
+# sonar.typescript.lcov.reportPaths=coverage/lcov.info
+
+# # === Encodage des fichiers source ===
+# sonar.sourceEncoding=UTF-8
+# === Identité du projet ===
 sonar.projectKey=Musync-BadgeManagement
 sonar.organization=Musync-Groupe1
-sonar.sources=src
-sonar.tests=test
-sonar.test.inclusions=**/*.spec.ts
-sonar.exclusions=**/node_modules/**,**/dist/**
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.sourceEncoding=UTF-8
+sonar.projectName=Mon Projet NestJS
+sonar.projectVersion=1.0.0
 
 # === Chemins des sources ===
 sonar.sources=src
 sonar.tests=test
 
-# === Langue principale du projet ===
-sonar.language=ts
-
-# === Fichiers à inclure / exclure ===
-sonar.exclusions=**/node_modules/**, **/dist/**, **/*.spec.ts
+# === Inclusion/exclusion des fichiers ===
 sonar.test.inclusions=**/*.spec.ts
+sonar.exclusions=**/node_modules/**,**/dist/**,**/*.spec.ts
 
-# === Configuration TypeScript ===
-sonar.ts.tslintconfigpath=tslint.json
+# === Rapport de couverture ===
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
-# === Encodage des fichiers source ===
+# === Encodage ===
 sonar.sourceEncoding=UTF-8
